# SapiSales

./: CMakeLists.txt  README.md
sapisales/headers/binary_search_tree/: user_bst.h
sapisales/headers/list/: user_list.h
sapisales/headers/manager/: lab10.h  lab11.h  lab2.h  lab3.h  lab4.h  lab5.h  lab8.h  lab9.h  lab_manager.h
sapisales/headers/models/: product.h  product_array.h  user.h  user_array.h
sapisales/headers/product_hash/: product_hash.h
sapisales/headers/queue/: user_queue.h
sapisales/headers/stack/: product_stack.h
sapisales/src/: main.c
sapisales/src/binary_search_tree/: user_bst.c
sapisales/src/list/: user_list.c
sapisales/src/manager/: lab10.c  lab11.c  lab2.c  lab3.c  lab4.c  lab5.c  lab8.c  lab9.c  lab_manager.c
sapisales/src/models/: product.c  product_array.c  user.c  user_array.c
sapisales/src/product_hash/: product_hash.c
sapisales/src/queue/: user_queue.c
sapisales/src/stack/: product_stack.c
shared/headers/: errors.h  messages.h  useful.h
shared/src/: errors.c  messages.c  useful.c
